deployment/quickstart.yaml
# Copyright 2017 Istio Authors
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

##################################################################################################
# service-a service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: service-a
  labels:
    app: service-a
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: service-a
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: service-a-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: service-a
        version: v1
    spec:
      containers:
      - name: service-a
        image: istio/service-a-v1:1.8.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: service-a-v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: service-a
        version: v2
    spec:
      containers:
      - name: service-a
        image: istio/service-a-v2:1.8.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
---
##################################################################################################
# service-b services
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: service-b
  labels:
    app: service-b
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: service-b
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: service-b-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: service-b
        version: v1
    spec:
      containers:
      - name: service-b
        image: istio/service-b-v1:1.8.0 
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
---
