deployment/quickstart-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: quickstart-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-a
spec:
  hosts:
  - "*"
  gateways:
  - quickstart-gateway
  http:
  - match:
    - uri:
        exact: /service-a
    route:
    - destination:
        host: service-a
        port:
          number: 9080
